listed 10 worst files

--- a/evaluation/visualizeScores.ipynb
+++ b/evaluation/visualizeScores.ipynb
@@ -27,23 +27,26 @@
     "import re\n",
     "import sys\n",
     "\n",
-    "LEXICONRESULTFILENAME = \"/home/erikt/projects/teamproject2018-11/data/vk19650102/analysis3.txt\"\n",
+    "LEXICONRESULTFILENAME = \"data/analysis3.txt\"\n",
     "LEXICONTITLE = \"Known-word percentages per article (OCR)\"\n",
     "\n",
     "def readScoreFile(fileName):\n",
     "    try: inFile = open(fileName,\"r\")\n",
     "    except Exception as e: sys.exit(\"error:\",str(e))\n",
     "    scores = []\n",
+    "    fileNames = []\n",
     "    for line in inFile:\n",
     "        line = line.strip()\n",
     "        fields = line.split()\n",
+    "        fileName = re.sub(\":$\",\"\",fields[0])\n",
     "        percentageString = fields[-1]\n",
     "        scoreString = re.sub(r\"%$\",\"\",percentageString)\n",
     "        score = float(scoreString)\n",
     "        scores.append(score)\n",
-    "    return(scores)\n",
+    "        fileNames.append(fileName)\n",
+    "    return(scores,fileNames)\n",
     "\n",
-    "lexiconScores = readScoreFile(LEXICONRESULTFILENAME)"
+    "lexiconScores,fileNames = readScoreFile(LEXICONRESULTFILENAME)"
    ]
   },
   {
@@ -103,10 +106,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "HAPAXRESULTFILENAME = \"/home/erikt/projects/teamproject2018-11/data/vk19650102/analysis4.txt\"\n",
+    "HAPAXRESULTFILENAME = \"data/analysis4.txt\"\n",
     "HAPAXTITLE = \"Percentages of unique words (hapaxes) per article (OCR)\"\n",
     "\n",
-    "hapaxScores = readScoreFile(HAPAXRESULTFILENAME)\n",
+    "hapaxScores,fileNames = readScoreFile(HAPAXRESULTFILENAME)\n",
     "hapaxAggregates = aggregate(hapaxScores)\n",
     "makeBarPlot(hapaxAggregates,HAPAXTITLE)"
    ]
@@ -134,15 +137,43 @@
     "    plt.title(SCATTERTITLE)\n",
     "    plt.savefig(OUTPUTIMAGEFILE)\n",
     "    plt.show()\n",
-    "    \n",
-    "makeScatterPlot(lexiconScores,hapaxScores,SCATTERTITLE)"
+    "\n",
+    "lexiconScoresCopy = list(lexiconScores)\n",
+    "hapaxScoresCopy = list(hapaxScores)\n",
+    "if len(lexiconScoresCopy) < len(hapaxScoresCopy): hapaxScoresCopy = hapaxScoresCopy[0:len(lexiconScoresCopy)]\n",
+    "if len(hapaxScoresCopy) < len(lexiconScoresCopy): lexiconScoresCopy = lexiconScoresCopy[0:len(hapaxScoresCopy)]\n",
+    "makeScatterPlot(lexiconScoresCopy,hapaxScoresCopy,SCATTERTITLE)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 4: compute the correlation coefficient of the results of the first two tasks. The closer the number is to 1 or -1, the stronger the two considered measures are correlated.\n",
+    "Task 4: extract the ten worst documents according to the two evaluation criteria"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import operator\n",
+    "\n",
+    "MAXTOP = 10\n",
+    "\n",
+    "combinedScores = {fileNames[i]:lexiconScoresCopy[i]+100-hapaxScoresCopy[i] for i in range(0,len(lexiconScoresCopy))}\n",
+    "combinedScoresSorted = sorted(combinedScores.items(),key=operator.itemgetter(1))\n",
+    "for pair in combinedScoresSorted[0:MAXTOP]: \n",
+    "    fileName,score = pair\n",
+    "    print(fileName,int(score))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task 5: compute the correlation coefficient of the results of the first two tasks. The closer the number is to 1 or -1, the stronger the two considered measures are correlated.\n",
     "\n",
     "Data: same as in tasks 1 and 2\n"
    ]
@@ -155,8 +186,17 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "print(\"correlation coefficient: \"+str(int(1000*np.corrcoef(lexiconScores,hapaxScores)[0][1])/1000))"
+    "print(\"correlation coefficient: \"+str(int(1000*np.corrcoef(lexiconScoresCopy,hapaxScoresCopy)[0][1])/1000))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
